Removed some of extra methods